# slot_booking_backend

./: .flake8  .gitignore  Makefile  README.rst  pyproject.toml
local/: settings.dev.py
scripts/: entrypoint.sh
slot-booking-backend/: manage.py
slot-booking-backend/project/: settings.py
slot_booking_backend/: manage.py
slot_booking_backend/company/: apps.py  models.py
slot_booking_backend/company/migrations/: 0001_initial.py
slot_booking_backend/custom_auth/: apps.py  models.py  urls.py  views.py
slot_booking_backend/custom_auth/migrations/: 0001_initial.py
slot_booking_backend/custom_auth/serializers/: jwt.py  login.py  otp_serializer.py  register.py
slot_booking_backend/custom_auth/services/: email_service.py  otp_service.py
slot_booking_backend/custom_auth/views/: login.py  otp.py  register.py
slot_booking_backend/general/utils/: collections.py  misc.py  settings.py
slot_booking_backend/project/: urls.py
slot_booking_backend/project/settings/: __init__.py  base.py  envvars.py  logging.py
slot_booking_backend/project/settings/templates/: settings.dev.py
slot_booking_backend/utils/: const.py  response.py
